--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
 thiserror = "2.0.12"
+validator = { version = "0.20.0", features = ["derive"] }
