--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ tracing-subscriber = "0.3.19"
 uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
 thiserror = "2.0.12"
 validator = { version = "0.20.0", features = ["derive"] }
+tower_governor = "0.7.0"
+rand = { version = "0.9.2", features = ["std"] }
