--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,9 @@ validator = { version = "0.20.0", features = ["derive"] }
 tower_governor = "0.7.0"
 rand = { version = "0.9.2", features = ["std"] }
 sha2 = "0.10.9"
+
+
+[dev-dependencies]
+tower = "0.5.2"
+http-body-util = "0.1.3"
+once_cell = "1.19.0"
